# Pix2Poly

./: .gitignore  Dockerfile  README.md  download_image.py  inference.py  main.py  predict_inria_coco_val_set.py  predict_mass_roads_test_set.py  predict_spacenet_coco_val_set.py  predict_whu_buildings_coco_test_set.py  pyproject.toml  temp.py  test_out.tif  utils.py
docs/: index.html  setup.md
