[project]
name = "pix2poly"
version = "0.1.0"
description = "A Sequence Prediction Method for End-to-end Polygonal Building Footprint Extraction from Remote Sensing Imagery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.3",
    "opencv-python-headless>=4.11.0.86",
    "shapely>=2.1.1",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
